# lightdown

./: .gitignore  AGENTS.md  Cargo.toml
crates/lightdown/: Cargo.toml
crates/lightdown-html/: Cargo.toml
crates/lightdown-html/src/: lib.rs
crates/lightdown-html/tests/: render.rs
crates/lightdown-html/tests/testcases/0001-renders-document-as-html-fragment/: input  output
crates/lightdown-html/tests/testcases/0002-escapes-text-and-attribute-values/: input  output
crates/lightdown-html/tests/testcases/0003-renders-inline-and-table-elements/: input  output
crates/lightdown-ir/: Cargo.toml
crates/lightdown-ir/src/: ast.rs  builtins.rs  bytecode.rs  compile.rs  document.rs  lexer.rs  lib.rs  parser.rs  runtime.rs  vm.rs
crates/lightdown-ir/tests/: bytecode.rs  eval.rs  parser.rs
crates/lightdown-wasm/: Cargo.toml  README.md
crates/lightdown-wasm/playground/: index.html  package-lock.json  package.json  pnpm-lock.yaml
crates/lightdown-wasm/playground/src/: main.js  style.css
crates/lightdown-wasm/src/: lib.rs
crates/lightdown/src/: block_parser.rs  embedded_ir.rs  error.rs  inline_parser.rs  lib.rs  lower.rs  syntax.rs
crates/lightdown/tests/: parse.rs  render.rs
docs/superpowers/plans/: 2026-06-09-let-lambda.md  2026-06-10-monaco-playground.md
docs/superpowers/specs/: 2026-06-10-monaco-playground-design.md
rfcs/rfc0001/: index.md
rfcs/rfc0002/: index.md
